<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="app_name">VBMS</string>
    <string name="bt_not_enabled_leaving">Bluetooth not enabled</string>
    <string name="button_ping_mu_qie_huan">Screen switch</string>
    <string name="button_scan">Scan for devices</string>
    <string name="button_ying_yong">Reboot system</string>
    <string name="can_shu_set_title">Settings</string>
    <string name="can_shu_set_title2">Live data</string>
    <string name="can_zhu_she_zhi_biao_ti">Parameter setting 1</string>
    <string name="can_zhu_she_zhi_biao_ti2">Parameter setting 2</string>
    <string name="chu_chang_she_zhi">Factory reset</string>
    <string name="device_param">Parameters</string>
    <string name="du_bms_can_shu">Refresh params</string>
    <string name="guan_ji">Ion lithium params</string>
    <string name="jiao_zhun">Auto balance</string>
    <string name="lian_jie_she_bei">Connect to device</string>
    <string name="mainAty">BMS Config</string>
    <string name="mydiscoverable">Set visible</string>
    <string name="myscan">Scanning</string>
    <string name="none_found">No device found</string>
    <string name="none_paired">Not pairing device</string>
    <string name="not_connected">Not connected</string>
    <string name="param1">Param settings</string>
    <string name="param2">Live data</string>
    <string name="ping_mu_sw">Zero current</string>
    <string name="project">Project</string>
    <string name="scanning">Scanning...</string>
    <string name="select_device">Choose device</string>
    <string name="send">Send</string>
    <string name="send_fail">Send failed</string>
    <string name="set">Set</string>
    <string name="set_param">Parameter settings</string>
    <string name="sync">Refresh</string>
    <string name="title_connected_to">Connected</string>
    <string name="title_connecting">Connecting</string>
    <string name="title_not_connected">Not connected</string>
    <string name="title_other_devices">Other devices</string>
    <string name="title_paired_devices">Paired devices</string>
    <string name="No_ChMOS">Charge on</string>
    <string name="No_DisMOS">Discharge on</string>
    <string name="OFF_ChMOS">Charge off</string>
    <string name="OFF_DisMOS">Discharge off</string>
    <string name="Tai_li">Li-Ion params</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="button_bluetooth">Modify BT addr</string>
    <string name="ch_mack">Charge MOS:</string>
    <string name="ch_state">Shut down</string>
    <string name="dis_mack">Discharge MOS:</string>
    <string name="dis_state">Shut down</string>
    <string name="j_h_mack">Balanced:</string>
    <string name="j_h_state">Shut down</string>
    <string name="run_timp">Total usage：</string>
    <string name="set_password">Confirm</string>
    <string name="sys_log">Sys log &gt;&gt;</string>
    <string name="yan_zheng_password">Confirm</string>
</resources>
